@@ -1,24 +1,24 @@
-7f79144e62c8e637e24ee9d622e4f687 *DESCRIPTION
+f1c48a7068a3676504d1adf4d55e6278 *DESCRIPTION
 d3af0aec93cc543ec698eff0e3c6453b *NAMESPACE
 16f96d6de80864e6a2825685232f1819 *R/Bernstein.R
-3126d7ad938777a2f05214a714d0e00f *R/box_bases.R
-e29be446cc3f19e171e814ac61caefbc *R/cbind_bases.R
+3379bd864d713b5f58d3e8da43d414ee *R/box_bases.R
+0ac7ed2d0832d70be1e0c6b18dde4cbe *R/cbind_bases.R
 dfaa6e61ada2f5144c1952ffddde84a8 *R/cyclic.R
 6a294987bd44121ea198e1ba489f13f9 *R/factor.R
-4ad1c654fbe1c5a1e0e0661576dc7142 *R/formula.R
+feb08dcedbf6dd318e420936bc58c0e3 *R/formula.R
 e036364ca1f36a2e8523a784b6d55c6c *R/intercept.R
 725532e2af625944eb301eb3e3f73ae2 *R/kronecker.R
 2b2b18525cd1fd3d933bfb35c85d8fc2 *R/legendre.R
 296d080b37f4f8a3d10e0328a84ace9b *R/log.R
-a4a8bafd0d19ce0071f6175da11815d5 *R/methods.R
+d9814884c4c699f4e3159b390cf7dcbd *R/methods.R
 306bc7ed8a1b3746a0e9af255ddcd37a *R/polynomial.R
 83a98e8fe5a1486261a3e6c3165d5c4e *R/utils.R
 1c9695dee7162d6e72883b552906e753 *cleanup
 19e26551cd6d143581d4c4eb33d7492b *inst/CITATION
-3411b8fef9536a992c93842d367b5008 *inst/NEWS.Rd
+ca2e45e7456da7a6f4e4e25cf5c950a5 *inst/NEWS.Rd
 8c5e874a1eca13a1733284774b725aa5 *man/Bernstein_basis.Rd
 e302699142ee0fef7062985a604afd3d *man/Legendre_basis.Rd
-28f18cd75a419ee040d1ac6febaddc5f *man/as.basis.formula.Rd
+22d4a6e591d3ed3068ca55542c7a4776 *man/as.basis.formula.Rd
 c736c39ccebe13232980b91e33670172 *man/b.Rd
 efe199fe5982028b2489377fe6776976 *man/basefun-package.Rd
 fd29262aeecbb02e20c43c2ee3af8dd0 *man/c.Rd
@@ -32,4 +32,4 @@ fd29262aeecbb02e20c43c2ee3af8dd0 *man/c.Rd
 ca5dcd4b8b4e2489f5fab84cf88c9bdb *tests/Bernstein-Ex.Rout.save
 677a2888a82bdafebfa1e181b0be6997 *tests/bases-Ex.R
 83fd02561ea64526cabc3985f4af6d9b *tests/formula.R
-b8914cfcc9e669648b545d914c31e1dc *tests/predict.R
+aa7e1370031295ff2986589402801017 *tests/predict.R
